Lecture 02 - Variables, Conditions - after-class updates

--- a/Lecture02/lecture2_1_variables.html
+++ b/Lecture02/lecture2_1_variables.html
@@ -16,6 +16,9 @@
         const PI = 3.1415;
         console.log(PI);
         // PI = 5; // not possible to change const value
+
+        // let num = 7;
+        // let num = "apple"; // also not allowed
     </script>
 </head>
 
