--- a/Lecture02/lecture2_3_prompt.html
+++ b/Lecture02/lecture2_3_prompt.html
@@ -5,11 +5,11 @@
     <title>JavaScript</title>
     <script type="text/javascript">
         "use strict";
-        let a = prompt(); // 15
-        console.log(a + 10); // 1510
-        console.log(parseInt(a) + 10); // 25
-        console.log(parseFloat(a) + 10); // 25
-        console.log((a * 1) + 10); // 25
+        const input = prompt(); // 15
+        console.log(input + 10); // 1510
+        console.log(parseInt(input) + 10); // 25
+        console.log(parseFloat(input) + 10); // 25
+        console.log((input * 1) + 10); // 25
     </script>
 </head>
 
