--- a/Lecture02/lecture2_2_operators.html
+++ b/Lecture02/lecture2_2_operators.html
@@ -10,7 +10,7 @@
         number = 5;
         console.log(number - 10); // -5
         number = "hello";
-        console.log(number + 2); // ?
+        console.log(number + 2); // "hello2"
 
         const PI = 3.1415;
         console.log(PI * 2); // 6.283
