--- a/Lecture02/lecture2_5_strings.html
+++ b/Lecture02/lecture2_5_strings.html
@@ -8,12 +8,12 @@
         let x = "7";
         let y = "2";
         let total = x + y;
-        console.log(total); // 72
+        console.log(total); // "72"
 
         let number = 17;
         let street = "King Road";
-        let address = number + street;
-        console.log(address); // 17King Road
+        let address = number + " " + street;
+        console.log(address); // "17 King Road"
     </script>
 </head>
 
