--- a/Lecture03/lecture3_1_if.html
+++ b/Lecture03/lecture3_1_if.html
@@ -5,7 +5,8 @@
     <title>JavaScript</title>
     <script type="text/javascript">
         "use strict";
-        let score = prompt("What is the score?") * 1;
+        const score = parseInt(prompt("What is the score?"));
+        console.log("Score: " + score);
         if (score >= 50) {
             console.log("Score is 50 or more");
         } else {
