--- a/Lecture03/lecture3_4_array.html
+++ b/Lecture03/lecture3_4_array.html
@@ -6,11 +6,11 @@
     <script type="text/javascript">
         "use strict";
         const myArray = [1, 7, 11];
-        console.log(myArray);
-        console.log(myArray[0]);
-        console.log(myArray[1]);
-        console.log(myArray[2]);
-        console.log(myArray.length);
+        console.log(myArray); // Array(3) [ 1, 7, 11 ]
+        console.log(myArray[0]); // 1
+        console.log(myArray[1]); // 7
+        console.log(myArray[2]); // 11
+        console.log(myArray.length); // 3
 
         const cities = [];
         cities.push("Tokyo");
@@ -24,7 +24,7 @@
 
         cities.push("Fukuoka");
         cities.reverse();
-        console.log(cities)
+        console.log(cities);
 
         const numbers = [4, 9, 3, 4, 7];
         console.log(numbers.sort());
