Lecture 03 - Conditions, Arrays - titles added

--- a/Lecture03/lecture3_1_if.html
+++ b/Lecture03/lecture3_1_if.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript</title>
+    <title>If</title>
     <script type="text/javascript">
         "use strict";
         const score = parseInt(prompt("What is the score?"));
