--- a/Lecture03/lecture3_3_switch.html
+++ b/Lecture03/lecture3_3_switch.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript</title>
+    <title>Switch</title>
     <script type="text/javascript">
         "use strict";
         let grade = prompt("What is the grade?");
