--- a/Lecture03/lecture3_4_array.html
+++ b/Lecture03/lecture3_4_array.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript</title>
+    <title>Array</title>
     <script type="text/javascript">
         "use strict";
         const myArray = [1, 7, 11];
