--- a/Lecture03/lecture3_5_2d_array.html
+++ b/Lecture03/lecture3_5_2d_array.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript</title>
+    <title>2D array</title>
     <script type="text/javascript">
         "use strict";
         const countries = [
