Lecture 02 - Variables, Operators - titles added

--- a/Lecture02/lecture2_6_comparison_operators.html
+++ b/Lecture02/lecture2_6_comparison_operators.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript</title>
+    <title>Comparison operators</title>
     <script type="text/javascript">
         "use strict";
         let x = 7;
