--- a/Lecture02/lecture2_2_operators.html
+++ b/Lecture02/lecture2_2_operators.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript</title>
+    <title>Numerical operators</title>
     <script type="text/javascript">
         "use strict";
         let number = 1;
