--- a/Lecture02/lecture2_4_assignments.html
+++ b/Lecture02/lecture2_4_assignments.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript</title>
+    <title>Assignments</title>
     <script type="text/javascript">
         "use strict";
         let x = 5;
