--- a/Lecture05/lecture5_4_function.html
+++ b/Lecture05/lecture5_4_function.html
@@ -5,6 +5,7 @@
     <title>Function</title>
     <script type="text/javascript">
         "use strict";
+
         function calculateArea(width, height) {
             return width * height;
         }
@@ -12,7 +13,15 @@
         const area1 = calculateArea(4, 6);
         console.log(area1);
 
+        // previous is usually better - better readability, maintainability, easier to debug, ...
         console.log(calculateArea(7, 2));
+
+
+        function sumTwoNumbersAndPrintThem(number1, number2) {
+            console.log(number1 + number2);
+        }
+
+        sumTwoNumbersAndPrintThem(4, 7);
     </script>
 </head>
 
