Lecture 07 - Forms - after-class fixes

--- a/Lecture07/lecture07_1_form.html
+++ b/Lecture07/lecture07_1_form.html
@@ -39,12 +39,12 @@
     <br>
     <br>
     <label for="submitWithLabel">
-        Submit input: <input id="submitWithLabel" type="submit">
+        Submit input: <input id="submitWithLabel" type="submit" value="Submit">
     </label>
     <br>
     <br>
     <label for="resetWithLabel">
-        Reset input: <input id="resetWithLabel" type="reset">
+        Reset input: <input id="resetWithLabel" type="reset" value="Reset">
     </label>
     <br>
     <br>
