--- a/Lecture06/lecture06_3_object_in_function.html
+++ b/Lecture06/lecture06_3_object_in_function.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Object</title>
+    <title>Object as a function parameter</title>
     <script type="text/javascript">
         "use strict";
         const dog = {
