--- a/Lecture06/lecture06_4_object_oop.html
+++ b/Lecture06/lecture06_4_object_oop.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Object</title>
+    <title>OOP Object</title>
     <script type="text/javascript">
         "use strict";
 
