Lecture 07 - Forms - titles added

--- a/Lecture07/lecture07_3_form_js_practice.html
+++ b/Lecture07/lecture07_3_form_js_practice.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Object</title>
+    <title>Forms and inputs</title>
     <script type="text/javascript">
         "use strict";
         function getEmail() {
