--- a/Lecture08/lecture08_3_function.html
+++ b/Lecture08/lecture08_3_function.html
@@ -22,6 +22,11 @@
         }
 
         sumTwoNumbersAndPrintThem(4, 7);
+
+        function getRandomLetter() {
+            const asciiCode = Math.random() * 26 + 97
+            return String.fromCharCode(asciiCode);
+        }
     </script>
 </head>
 
