--- a/Lecture08/lecture08_5_objects.html
+++ b/Lecture08/lecture08_5_objects.html
@@ -20,7 +20,7 @@
             {
                 name: "Jack",
                 email: "jack@example.com",
-                friends: ["Tim, Todd", "Lucy"],
+                friends: ["Tim", "Todd", "Lucy"],
             },
             {
                 name: "Lucy",
@@ -32,6 +32,8 @@
         // see how the objects look in the console
         console.log(address);
         console.log(users);
+
+        console.log(users[0].friends[2]); // "Lucy"
     </script>
 </head>
 
