Lecture 04 - Loops - after-class update

--- a/Lecture04/lecture04_2_for+array.html
+++ b/Lecture04/lecture04_2_for+array.html
@@ -6,7 +6,7 @@
     <script type="text/javascript">
         "use strict";
         const numbers = [5, 4, 37, 9, 3, 15];
-        let max = numbers[0];
+        let max = numbers[0]; // can throw an exception when the array is empty
         for (let i = 1; i < numbers.length; i++) {
             if (max < numbers[i]) {
                 max = numbers[i];
