Lecture 06 - Objects, OOP - minor addition

--- a/Lecture08/lecture08_6_oop.html
+++ b/Lecture08/lecture08_6_oop.html
@@ -10,6 +10,7 @@
         function Fruit(type, color) {
             this.type = type;
             this.color = color;
+            this.ripe = true;
             this.getInfo = function () {
                 return 'The color of ' + this.type + ' is ' + this.color + '.';
             };
