Lecture 09 - Mouse events - after-class update

--- a/Lecture09/lecture09_2_checkbox_events.html
+++ b/Lecture09/lecture09_2_checkbox_events.html
@@ -20,7 +20,7 @@
                         return accumulator + ", " + currentValue;
                     });
             } else {
-                document.querySelector("#selectedCities").innerHTML = "<p>-</p>";
+                document.querySelector("#selectedCities").innerHTML = "-";
             }
         }
 
