--- a/Lecture09/lecture09_2_checkbox_events.html
+++ b/Lecture09/lecture09_2_checkbox_events.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Object</title>
+    <title>Checkbox events</title>
     <script type="text/javascript">
         "use strict";
 
