Lecture 11 - Timers - after-class update + practices

--- a/Lecture11/lecture11_3_timeout_clear.html
+++ b/Lecture11/lecture11_3_timeout_clear.html
@@ -11,6 +11,7 @@
         }
 
         const timerID = setTimeout(printRandomNumber, 2500);
+        console.log("Timer ID:", timerID);
         clearTimeout(timerID);
 
         let timerID2;
