--- a/Lecture11/lecture11_6_interval_clear.html
+++ b/Lecture11/lecture11_6_interval_clear.html
@@ -23,6 +23,7 @@
 
         function cancelTimer() {
             clearInterval(timerID2);
+            console.log("Cancelled timer:", timerID2);
             document.querySelector("#button").disabled = false;
         }
 
