Lecture 06 - Objects, OOP - complete object sample

--- a/Lecture06/lecture06_1_object.html
+++ b/Lecture06/lecture06_1_object.html
@@ -8,8 +8,11 @@
         const student = {
             studentName: "Tim",
             studentID: 6548,
+            getStudentNameUppercase: function () {
+                return this.studentName.toUpperCase();
+            },
             showStudentNameUppercase: function () {
-                console.log(this.studentName.toUpperCase());
+                console.log(this.getStudentNameUppercase());
             },
         };
 
