Lecture 12 - JSON and Ajax - after-class update

--- a/Lecture12/lecture12_3_json.html
+++ b/Lecture12/lecture12_3_json.html
@@ -17,6 +17,7 @@
 
         const student2 = JSON.parse("{\"studentName\":\"Jack\",\"studentID\":1763,\"enrolled\":false,\"courses\":[\"Web Programming 3\",\"Intro to algorithms\"]}");
         console.log(student2);
+        console.log(student2.studentName);
     </script>
 </head>
 
