--- a/Lecture12/lecture12_5_ajax.html
+++ b/Lecture12/lecture12_5_ajax.html
@@ -33,7 +33,7 @@
             xhr.send(null);
         };
 
-        const sendRequestFetchText = (path, callback) => {
+        const sendRequestFetchText = function (path, callback) {
             fetch(path)
                 .then(response => response.text())
                 .then(text => callback(text))
